--- a/www/_includes/layouts/base.njk
+++ b/www/_includes/layouts/base.njk
@@ -39,6 +39,7 @@ description: 'Snowpack is the fast, bundle-free build tool for all kinds of fron
     </style>
   </head>
   <body class="base">
+    {% include 'layouts/components/grid-banner.njk' %}
     {% include 'layouts/components/nav.njk' %}
     {{ content | safe }}
   </body>
