--- a/www/_includes/layouts/components/grid-banner.njk
+++ b/www/_includes/layouts/components/grid-banner.njk
@@ -1,9 +1,9 @@
-<section class="grid-banner" style="display: none">
-  <div class="container">
-    <div class="notification">
-      Snowpack 2.7 is here!
-      <a href="/posts/2020-07-30-snowpack-2-7-release/">
-        Read the launch post →
+<section class="grid-banner">
+  <div class="notification">
+    <div class="container">
+      Snowpack 3.0 Release Candidate is here!
+      <a href="/posts/2020-12-03-snowpack-3-release-candidate">
+        Read the announcement post →
       </a>
     </div>
   </div>
